k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eks-demo-app-service
  namespace: production
  labels:
    app: eks-demo-app
    app.kubernetes.io/name: eks-demo-app
    app.kubernetes.io/managed-by: github-actions
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: eks-demo-app
